// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component DeleteRecord form submission should allow enter reason and submit the form for a record without DOI 1`] = `"{"rek_status":8,"reason":"deletion reason","fez_record_search_key_doi_resolution_url":null,"fez_record_search_key_new_doi":null,"fez_record_search_key_deletion_notes":null}"`;

exports[`Component DeleteRecord form submission should allow enter reason, new doi and submit form for a record with DataCite DOI 1`] = `"{"rek_status":8,"reason":"deletion reason","fez_record_search_key_doi_resolution_url":null,"fez_record_search_key_new_doi":{"rek_new_doi":"10.1234/uql5678"},"fez_record_search_key_deletion_notes":{"rek_deletion_notes":"deletion notes"}}"`;

exports[`Component DeleteRecord form submission should allow enter reason, new doi resolution URL and submit form for a record with Crossref DOI 1`] = `"{"rek_status":8,"reason":"deletion reason","fez_record_search_key_doi_resolution_url":{"rek_doi_resolution_url":"https://web.library.uq.edu.au/test"},"fez_record_search_key_new_doi":null,"fez_record_search_key_deletion_notes":null}"`;

exports[`Component DeleteRecord form submission should submit form for a deleted record without DOI 1`] = `"{"rek_status":8,"fez_record_search_key_doi_resolution_url":null,"fez_record_search_key_new_doi":null,"fez_record_search_key_deletion_notes":null}"`;

exports[`Component DeleteRecord form submission should submit the form for a record without DOI 1`] = `"{"rek_status":8,"fez_record_search_key_doi_resolution_url":null,"fez_record_search_key_new_doi":null,"fez_record_search_key_deletion_notes":null}"`;

exports[`Component DeleteRecord should render delete record form with data collection citation 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Delete work
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <form>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-to-be-deleted"
              id="standard-card-work-to-be-deleted"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-work-to-be-deleted-header"
                    id="standard-card-work-to-be-deleted-header"
                  >
                    Work to be deleted
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-work-to-be-deleted-content"
                data-testid="standard-card-work-to-be-deleted-content"
                id="standard-card-work-to-be-deleted-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                    >
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-6on8jz-MuiTypography-root"
                            >
                              <a
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-1ulg1rp-MuiGridLegacy-root"
                          >
                            <div
                              class="citationContent citationDataCollection"
                            >
                              <span
                                class="citationAuthors"
                              >
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  Brown, M. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  He, Y.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  Rothnagel, J. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  Saunders, N. A.
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  Smith, R.
                                </span>
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationPublisher"
                              >
                                 
                                American Society for Cell Biology
                                .
                              </span>
                              <span
                                class="citationCollectionType"
                              >
                                 
                                Journal Article
                                .
                              </span>
                              <span
                                data-testid="rek-doi"
                              >
                                <a
                                  aria-label="Open this DOI in an new window"
                                  class="citationDoiLink css-1oqhn84"
                                  data-analyticsid="citation-doi-link"
                                  data-testid="citation-doi-link"
                                  href="https://doi.org/10.2364312345"
                                  id="citation-doi-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Open this DOI in an new window"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rso8a2-MuiSvgIcon-root"
                                    data-testid="OpenInNewIcon"
                                    focusable="false"
                                    id="citation-doi-link-new-window-icon"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                                    />
                                  </svg>
                                  https://doi.org/10.2364312345
                                </a>
                              </span>
                            </div>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-container css-4zaipq-MuiGridLegacy-root"
                            >
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-wx9gf7-MuiGridLegacy-root"
                              >
                                <div
                                  class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                                >
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                                  />
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-zww2ny-MuiDivider-root"
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            class="MuiBox-root css-0"
            data-testid="confirmDialogBox"
          />
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card"
              id="standard-card"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-header"
                    id="standard-card-header"
                  >
                    Describe the reason to 
                    delete
                     this work
                    <div
                      style="font-size: 60%;"
                    >
                      (visible to admins only, displayed under view record page's history)
                    </div>
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-content"
                data-testid="standard-card-content"
                id="standard-card-content"
              >
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-z5z9i1-MuiGridLegacy-root"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                      data-testid="reason"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                        data-shrink="false"
                        data-testid="reason-label"
                        for="reason-input"
                        id="reason-label"
                      >
                        Please enter a reason why you are deleting this work
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-glkc0l-MuiInputBase-root-MuiInput-root"
                      >
                        <textarea
                          aria-invalid="false"
                          aria-label="Please enter a reason why you are deleting this work"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                          data-analyticsid="reason-input"
                          data-testid="reason-input"
                          id="reason-input"
                          label="Please enter a reason why you are deleting this work"
                          name="reason"
                          rows="3"
                          style="height: 0px; overflow: hidden;"
                        />
                        <textarea
                          aria-hidden="true"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                          readonly=""
                          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                          tabindex="-1"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card"
              id="standard-card"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-header"
                    id="standard-card-header"
                  >
                    New DOI
                    <div
                      style="font-size: 60%;"
                    >
                      (displayed on the records deleted page)
                    </div>
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-content"
                data-testid="standard-card-content"
                id="standard-card-content"
              >
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-z5z9i1-MuiGridLegacy-root"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                      data-testid="rek-new-doi"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                        data-shrink="false"
                        data-testid="rek-new-doi-label"
                        for="rek-new-doi-input"
                        id="rek-new-doi-label"
                      >
                        Please enter the DOI to which the record moved to
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                      >
                        <input
                          aria-invalid="false"
                          aria-label="Please enter the DOI to which the record moved to"
                          class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                          data-analyticsid="rek-new-doi-input"
                          data-testid="rek-new-doi-input"
                          id="rek-new-doi-input"
                          label="Please enter the DOI to which the record moved to"
                          name="publication.fez_record_search_key_new_doi.rek_new_doi"
                          placeholder="Enter a valid DOI (e.g. 10.123/456)"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card"
              id="standard-card"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-header"
                    id="standard-card-header"
                  >
                    Deletion Notes
                    <div
                      style="font-size: 60%;"
                    >
                      (displayed on the records deleted page)
                    </div>
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-content"
                data-testid="standard-card-content"
                id="standard-card-content"
              >
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-z5z9i1-MuiGridLegacy-root"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                  >
                    <div
                      data-analyticsid="rek-deletion-notes"
                      data-testid="rek-deletion-notes"
                      id="rek-deletion-notes"
                    >
                      <span />
                      <div />
                      <span
                        class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                        style="display: inline-block;"
                      >
                        0
                         characters of 
                        2000
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
          style="margin-top: 8px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
          />
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-alav1n-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="cancel-delete-record"
              data-testid="cancel-delete-record"
              id="cancel-delete-record"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-alav1n-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="delete-admin"
              data-testid="submit-delete-record"
              id="submit-delete-record"
              tabindex="0"
              type="submit"
            >
              Delete
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Component DeleteRecord should render delete record form with deleted data collection citation 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Update deleted work
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <form>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-deleted"
              id="standard-card-work-deleted"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-work-deleted-header"
                    id="standard-card-work-deleted-header"
                  >
                    Work deleted
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-work-deleted-content"
                data-testid="standard-card-work-deleted-content"
                id="standard-card-work-deleted-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                    >
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-6on8jz-MuiTypography-root"
                            >
                              <a
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-1ulg1rp-MuiGridLegacy-root"
                          >
                            <div
                              class="citationContent citationDataCollection"
                            >
                              <span
                                class="citationAuthors"
                              >
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  Brown, M. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  He, Y.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  Rothnagel, J. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  Saunders, N. A.
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  Smith, R.
                                </span>
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationPublisher"
                              >
                                 
                                American Society for Cell Biology
                                .
                              </span>
                              <span
                                class="citationCollectionType"
                              >
                                 
                                Journal Article
                                .
                              </span>
                              <span
                                data-testid="rek-doi"
                              >
                                <a
                                  aria-label="Open this DOI in an new window"
                                  class="citationDoiLink css-1oqhn84"
                                  data-analyticsid="citation-doi-link"
                                  data-testid="citation-doi-link"
                                  href="https://doi.org/10.2364312345"
                                  id="citation-doi-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Open this DOI in an new window"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rso8a2-MuiSvgIcon-root"
                                    data-testid="OpenInNewIcon"
                                    focusable="false"
                                    id="citation-doi-link-new-window-icon"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                                    />
                                  </svg>
                                  https://doi.org/10.2364312345
                                </a>
                              </span>
                            </div>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-container css-4zaipq-MuiGridLegacy-root"
                            >
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-wx9gf7-MuiGridLegacy-root"
                              >
                                <div
                                  class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                                >
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                                  />
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-zww2ny-MuiDivider-root"
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            class="MuiBox-root css-0"
            data-testid="confirmDialogBox"
          />
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card"
              id="standard-card"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-header"
                    id="standard-card-header"
                  >
                    Describe the reason to 
                    update
                     this work
                    <div
                      style="font-size: 60%;"
                    >
                      (visible to admins only, displayed under view record page's history)
                    </div>
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-content"
                data-testid="standard-card-content"
                id="standard-card-content"
              >
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-z5z9i1-MuiGridLegacy-root"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                      data-testid="reason"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                        data-shrink="false"
                        data-testid="reason-label"
                        for="reason-input"
                        id="reason-label"
                      >
                        Please enter a reason why you are updating this work
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-glkc0l-MuiInputBase-root-MuiInput-root"
                      >
                        <textarea
                          aria-invalid="false"
                          aria-label="Please enter a reason why you are updating this work"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                          data-analyticsid="reason-input"
                          data-testid="reason-input"
                          id="reason-input"
                          label="Please enter a reason why you are updating this work"
                          name="reason"
                          rows="3"
                          style="height: 0px; overflow: hidden;"
                        />
                        <textarea
                          aria-hidden="true"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                          readonly=""
                          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                          tabindex="-1"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card"
              id="standard-card"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-header"
                    id="standard-card-header"
                  >
                    New DOI
                    <div
                      style="font-size: 60%;"
                    >
                      (displayed on the records deleted page)
                    </div>
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-content"
                data-testid="standard-card-content"
                id="standard-card-content"
              >
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-z5z9i1-MuiGridLegacy-root"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                      data-testid="rek-new-doi"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                        data-shrink="false"
                        data-testid="rek-new-doi-label"
                        for="rek-new-doi-input"
                        id="rek-new-doi-label"
                      >
                        Please enter the DOI to which the record moved to
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                      >
                        <input
                          aria-invalid="false"
                          aria-label="Please enter the DOI to which the record moved to"
                          class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                          data-analyticsid="rek-new-doi-input"
                          data-testid="rek-new-doi-input"
                          id="rek-new-doi-input"
                          label="Please enter the DOI to which the record moved to"
                          name="publication.fez_record_search_key_new_doi.rek_new_doi"
                          placeholder="Enter a valid DOI (e.g. 10.123/456)"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card"
              id="standard-card"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-header"
                    id="standard-card-header"
                  >
                    Deletion Notes
                    <div
                      style="font-size: 60%;"
                    >
                      (displayed on the records deleted page)
                    </div>
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-content"
                data-testid="standard-card-content"
                id="standard-card-content"
              >
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-z5z9i1-MuiGridLegacy-root"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                  >
                    <div
                      data-analyticsid="rek-deletion-notes"
                      data-testid="rek-deletion-notes"
                      id="rek-deletion-notes"
                    >
                      <span />
                      <div />
                      <span
                        class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                        style="display: inline-block;"
                      >
                        0
                         characters of 
                        2000
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
          style="margin-top: 8px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
          />
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-alav1n-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="cancel-delete-record"
              data-testid="cancel-delete-record"
              id="cancel-delete-record"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-alav1n-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="delete-admin"
              data-testid="submit-delete-record"
              id="submit-delete-record"
              tabindex="0"
              type="submit"
            >
              Update
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Component DeleteRecord should render delete record form with deleted record citation 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Update deleted work
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <form>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-deleted"
              id="standard-card-work-deleted"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-work-deleted-header"
                    id="standard-card-work-deleted-header"
                  >
                    Work deleted
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-work-deleted-content"
                data-testid="standard-card-work-deleted-content"
                id="standard-card-work-deleted-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                    >
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-6on8jz-MuiTypography-root"
                            >
                              <a
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-1ulg1rp-MuiGridLegacy-root"
                          >
                            <div
                              class="citationContent citationJournalArticle"
                            >
                              <span
                                class="citationAuthors"
                              >
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  Brown, M. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  He, Y.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  Rothnagel, J. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  Saunders, N. A.
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  Smith, R.
                                </span>
                                 
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationJournalName"
                              >
                                 
                                Molecular Biology of The Cell
                                 
                              </span>
                              <span
                                class="citationVolumeNumber"
                              >
                                 
                                15
                                 
                              </span>
                              <span
                                class="citationIssueNumber empty"
                              />
                              <span
                                class="citationArticleNumber empty"
                              />
                              <span
                                class="citationPageRange"
                              >
                                <span
                                  class="citationStartPage"
                                >
                                  252A
                                </span>
                                -
                                <span
                                  class="citationEndPage"
                                >
                                  253A
                                </span>
                              </span>
                              <span>
                                . 
                              </span>
                              <span
                                class="citationDOI empty"
                              />
                            </div>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-container css-4zaipq-MuiGridLegacy-root"
                            >
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-wx9gf7-MuiGridLegacy-root"
                              >
                                <div
                                  class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                                >
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                                  />
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-zww2ny-MuiDivider-root"
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            class="MuiBox-root css-0"
            data-testid="confirmDialogBox"
          />
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card"
              id="standard-card"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-header"
                    id="standard-card-header"
                  >
                    Describe the reason to 
                    update
                     this work
                    <div
                      style="font-size: 60%;"
                    >
                      (visible to admins only, displayed under view record page's history)
                    </div>
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-content"
                data-testid="standard-card-content"
                id="standard-card-content"
              >
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-z5z9i1-MuiGridLegacy-root"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                      data-testid="reason"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                        data-shrink="false"
                        data-testid="reason-label"
                        for="reason-input"
                        id="reason-label"
                      >
                        Please enter a reason why you are updating this work
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-glkc0l-MuiInputBase-root-MuiInput-root"
                      >
                        <textarea
                          aria-invalid="false"
                          aria-label="Please enter a reason why you are updating this work"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                          data-analyticsid="reason-input"
                          data-testid="reason-input"
                          id="reason-input"
                          label="Please enter a reason why you are updating this work"
                          name="reason"
                          rows="3"
                          style="height: 0px; overflow: hidden;"
                        />
                        <textarea
                          aria-hidden="true"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                          readonly=""
                          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                          tabindex="-1"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
          style="margin-top: 8px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
          />
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-alav1n-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="cancel-delete-record"
              data-testid="cancel-delete-record"
              id="cancel-delete-record"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-alav1n-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="delete-admin"
              data-testid="submit-delete-record"
              id="submit-delete-record"
              tabindex="0"
              type="submit"
            >
              Update
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
